# name: TestCreate.test[True-uvloop]
  <class 'dict'> {
    'change_count': 1,
    'created_at': '2015-10-06T20:00:00Z',
    'has_files': True,
    'has_json': False,
    'id': 'xjqvxigh',
    'job': <class 'dict'> {
      'id': 'u3cuwaoq',
    },
    'manifest': 'manifest',
    'modified_otu_count': 0,
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
    'version': 9,
  }
---
# name: TestCreate.test[True-uvloop].1
  <class 'dict'> {
    '_id': 'u3cuwaoq',
    'acquired': False,
    'args': <class 'dict'> {
      'index_id': 'xjqvxigh',
      'index_version': 9,
      'manifest': 'manifest',
      'ref_id': 'foo',
      'user_id': 'test',
    },
    'key': None,
    'rights': <class 'dict'> {
      'indexes': <class 'dict'> {
        'modify': <class 'list'> [
          'xjqvxigh',
        ],
      },
      'references': <class 'dict'> {
        'read': <class 'list'> [
          'foo',
        ],
      },
    },
    'state': 'waiting',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      },
    ],
    'user': <class 'dict'> {
      'id': 'test',
    },
    'workflow': 'build_index',
  }
---
# name: TestCreate.test[True-uvloop].2
  <class 'dict'> {
    '_id': 'xjqvxigh',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'has_files': True,
    'has_json': False,
    'job': <class 'dict'> {
      'id': 'u3cuwaoq',
    },
    'manifest': 'manifest',
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
    'version': 9,
  }
---
# name: test_finalize[uvloop-404_reference]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Reference associated with index does not exist',
  }
---
# name: test_finalize[uvloop-409_fasta]
  <class 'dict'> {
    'id': 'conflict',
    'message': 'A FASTA file must be uploaded in order to finalize index',
  }
---
# name: test_finalize[uvloop-409_genome]
  <class 'dict'> {
    'id': 'conflict',
    'message': 'Reference requires that all Bowtie2 index files have been uploaded. Missing files: reference.1.bt2, reference.2.bt2, reference.3.bt2, reference.4.bt2, reference.rev.1.bt2, reference.rev.2.bt2',
  }
---
# name: test_finalize[uvloop-None]
  <class 'dict'> {
    'change_count': 0,
    'files': <class 'list'> [
      <class 'dict'> {
        'download_url': '/indexes/test_index/files/reference.fa.gz',
        'id': 1,
        'index': 'test_index',
        'name': 'reference.fa.gz',
        'size': None,
        'type': 'fasta',
      },
      <class 'dict'> {
        'download_url': '/indexes/test_index/files/reference.json.gz',
        'id': 2,
        'index': 'test_index',
        'name': 'reference.json.gz',
        'size': None,
        'type': 'json',
      },
      <class 'dict'> {
        'download_url': '/indexes/test_index/files/reference.1.bt2',
        'id': 3,
        'index': 'test_index',
        'name': 'reference.1.bt2',
        'size': None,
        'type': 'bowtie2',
      },
      <class 'dict'> {
        'download_url': '/indexes/test_index/files/reference.2.bt2',
        'id': 4,
        'index': 'test_index',
        'name': 'reference.2.bt2',
        'size': None,
        'type': 'bowtie2',
      },
      <class 'dict'> {
        'download_url': '/indexes/test_index/files/reference.3.bt2',
        'id': 5,
        'index': 'test_index',
        'name': 'reference.3.bt2',
        'size': None,
        'type': 'bowtie2',
      },
      <class 'dict'> {
        'download_url': '/indexes/test_index/files/reference.4.bt2',
        'id': 6,
        'index': 'test_index',
        'name': 'reference.4.bt2',
        'size': None,
        'type': 'bowtie2',
      },
      <class 'dict'> {
        'download_url': '/indexes/test_index/files/reference.rev.1.bt2',
        'id': 7,
        'index': 'test_index',
        'name': 'reference.rev.1.bt2',
        'size': None,
        'type': 'bowtie2',
      },
      <class 'dict'> {
        'download_url': '/indexes/test_index/files/reference.rev.2.bt2',
        'id': 8,
        'index': 'test_index',
        'name': 'reference.rev.2.bt2',
        'size': None,
        'type': 'bowtie2',
      },
    ],
    'id': 'test_index',
    'modified_otu_count': 0,
    'ready': True,
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
  }
---
# name: test_finalize[uvloop-None].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 1,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_find[uvloop]
  <class 'dict'> {
    'change_count': 12,
    'documents': <class 'list'> [
      <class 'dict'> {
        'change_count': 4,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'bar',
        'job': <class 'dict'> {
          'id': 'bar',
        },
        'modified_otu_count': 3,
        'ready': False,
        'reference': <class 'dict'> {
          'id': 'bar',
        },
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': '7CtBo2yG',
        },
        'version': 1,
      },
      <class 'dict'> {
        'change_count': 2,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'foo',
        'job': <class 'dict'> {
          'id': 'foo',
        },
        'modified_otu_count': 2,
        'ready': False,
        'reference': <class 'dict'> {
          'id': 'foo',
        },
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': '7CtBo2yG',
        },
        'version': 0,
      },
    ],
    'found_count': 2,
    'modified_otu_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
    'total_otu_count': 123,
  }
---
# name: test_find_history[uvloop-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'id': 'kjs8sa99.3',
        'index': <class 'dict'> {
          'id': 'foobar',
          'version': 0,
        },
        'method_name': 'add_sequence',
        'otu': <class 'dict'> {
          'id': 'kjs8sa99',
          'name': 'Foo',
          'version': 3,
        },
        'user': <class 'dict'> {
          'id': 'fred',
        },
      },
      <class 'dict'> {
        'id': 'zxbbvngc.2',
        'index': <class 'dict'> {
          'id': 'foobar',
          'version': 0,
        },
        'method_name': 'add_isolate',
        'otu': <class 'dict'> {
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 2,
        },
        'user': <class 'dict'> {
          'id': 'igboyes',
        },
      },
      <class 'dict'> {
        'id': 'zxbbvngc.1',
        'index': <class 'dict'> {
          'id': 'foobar',
          'version': 0,
        },
        'method_name': 'add_isolate',
        'otu': <class 'dict'> {
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 1,
        },
        'user': <class 'dict'> {
          'id': 'igboyes',
        },
      },
      <class 'dict'> {
        'id': 'zxbbvngc.0',
        'index': <class 'dict'> {
          'id': 'foobar',
          'version': 0,
        },
        'otu': <class 'dict'> {
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 0,
        },
        'user': <class 'dict'> {
          'id': 'igboyes',
        },
      },
    ],
    'found_count': 4,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 6,
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'change_count': 2,
    'contributors': <class 'list'> [
      <class 'dict'> {
        'count': 1,
        'id': 'fred',
      },
      <class 'dict'> {
        'count': 3,
        'id': 'igboyes',
      },
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'files': <class 'list'> [
    ],
    'has_files': True,
    'id': 'foobar',
    'job': <class 'dict'> {
      'id': 'sj82la',
    },
    'modified_otu_count': 2,
    'otus': <class 'list'> [
      <class 'dict'> {
        'change_count': 1,
        'id': 'kjs8sa99',
        'name': 'Foo',
      },
      <class 'dict'> {
        'change_count': 3,
        'id': 'zxbbvngc',
        'name': 'Test',
      },
    ],
    'ready': False,
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'version': 0,
  }
---
# name: test_upload[uvloop-None]
  <class 'dict'> {
    'id': 1,
    'index': 'foo',
    'name': 'reference.1.bt2',
    'size': 7205747,
    'type': 'bowtie2',
    'uploaded_at': '2015-10-06T20:00:00Z',
  }
---
# name: test_upload[uvloop-None].1
  <class 'dict'> {
    '_id': 'foo',
    'reference': <class 'dict'> {
      'id': 'bar',
    },
    'user': <class 'dict'> {
      'id': '7CtBo2yG',
    },
  }
---
# name: test_upload[uvloop-None].2
  <IndexFile(id=1, name=reference.1.bt2, index=foo, type=bowtie2, size=7205747)>
---
